reflect update